chore: adjustements for demo
