# frontend/src/lib/backend/openapi.json
@@ -226,6 +226,23 @@
 				}
 			}
 		},
+		"/api/users/me": {
+			"get": {
+				"tags": ["users"],
+				"summary": "Read User Me",
+				"description": "Get current user.",
+				"operationId": "users-read_user_me",
+				"responses": {
+					"200": {
+						"description": "Successful Response",
+						"content": {
+							"application/json": { "schema": { "$ref": "#/components/schemas/UserPublic" } }
+						}
+					}
+				},
+				"security": [{ "OAuth2PasswordBearer": [] }]
+			}
+		},
 		"/api/users/signup": {
 			"post": {
 				"tags": ["users"],
@@ -1289,11 +1306,19 @@
 						"title": "Description"
 					},
 					"start_dt": {
-						"anyOf": [{ "type": "string", "format": "date-time" }, { "type": "null" }],
+						"anyOf": [
+							{ "type": "string" },
+							{ "type": "string", "format": "date-time" },
+							{ "type": "null" }
+						],
 						"title": "Start Dt"
 					},
 					"end_dt": {
-						"anyOf": [{ "type": "string", "format": "date-time" }, { "type": "null" }],
+						"anyOf": [
+							{ "type": "string" },
+							{ "type": "string", "format": "date-time" },
+							{ "type": "null" }
+						],
 						"title": "End Dt"
 					},
 					"id": { "type": "string", "format": "uuid", "title": "Id" },
@@ -1354,7 +1379,6 @@
 						"anyOf": [{ "type": "string" }, { "type": "null" }],
 						"title": "Description"
 					},
-					"type": { "type": "string", "title": "Type", "default": "Org" },
 					"name": { "type": "string", "title": "Name" },
 					"activities": {
 						"anyOf": [
@@ -1384,7 +1408,6 @@
 						"anyOf": [{ "type": "string" }, { "type": "null" }],
 						"title": "Description"
 					},
-					"type": { "type": "string", "title": "Type", "default": "Org" },
 					"id": { "type": "string", "format": "uuid", "title": "Id" },
 					"name": { "type": "string", "title": "Name" },
 					"activities": {
@@ -1415,7 +1438,6 @@
 						"anyOf": [{ "type": "string" }, { "type": "null" }],
 						"title": "Description"
 					},
-					"type": { "type": "string", "title": "Type", "default": "Org" },
 					"name": { "anyOf": [{ "type": "string" }, { "type": "null" }], "title": "Name" },
 					"activities": {
 						"anyOf": [
@@ -1515,7 +1537,6 @@
 			},
 			"PersonCreate": {
 				"properties": {
-					"type": { "type": "string", "title": "Type", "default": "Person" },
 					"name": { "type": "string", "title": "Name" },
 					"role": { "anyOf": [{ "type": "string" }, { "type": "null" }], "title": "Role" },
 					"contact": {
@@ -1528,7 +1549,6 @@
 			},
 			"PersonPublic": {
 				"properties": {
-					"type": { "type": "string", "title": "Type", "default": "Person" },
 					"name": { "type": "string", "title": "Name" },
 					"role": { "anyOf": [{ "type": "string" }, { "type": "null" }], "title": "Role" },
 					"id": { "type": "string", "format": "uuid", "title": "Id" },
@@ -1549,7 +1569,6 @@
 			},
 			"PersonUpdate": {
 				"properties": {
-					"type": { "type": "string", "title": "Type", "default": "Person" },
 					"name": { "type": "string", "title": "Name" },
 					"role": { "anyOf": [{ "type": "string" }, { "type": "null" }], "title": "Role" },
 					"contact": {
